--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,14 @@
 <footer>
-    
+    <footer class="footer">
+      <div class="container footer__inner">
+        <span>© <span id="year"></span> Javier Díaz</span>
+        <span class="muted">Hecho con HTML + CSS · GitHub Pages</span>
+      </div>
+    </footer>
 
     <div class="footer-container">
-        <div class="left">© 2025 - Javier Díaz - v0.0.36
+        <div class="left">
+            <span>© <span id="year"></span> Javier Díaz</span> - v0.0.36
         </div>
         <div class="right">
             <a href="readme.MD" target="_blank" title="Detalles del proyecto" class="btn-readme">README</a>
