Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -252,9 +252,11 @@
         btnLogout.style.display = 'none';
       }
     });
-
+    
+    document.getElementById('year').textContent = new Date().getFullYear();
 
   </script>
 
 </body>
 </html>
+
