--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
   <!-- FOOTER -->
 <!--   <div id="footer-container"></div>
  -->
- <footer>
-  <div>© 2025 - Javier Díaz - API googleapis - v0.0.30 (beta)</div>
-  <div>
-    <a href="https://www.youtube.com/watch?v=wW9TwZdWpjw" target="_blank" title="Visita mi canal de YouTube">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="height: 24px;">
-    </a>
+<footer>
+  <div class="container footer__inner">
+    <span>© <span id="year"></span> Javier Díaz</span>
+    <span class="muted">Hecho con HTML + CSS · GitHub Pages</span>
   </div>
 </footer>
  
@@ -259,4 +257,5 @@
 
 </body>
 </html>
+
 
