--- a/index.html
+++ b/index.html
@@ -250,12 +250,15 @@
         btnLogout.style.display = 'none';
       }
     });
-    
-    document.getElementById('year').textContent = new Date().getFullYear();
+  
+  </script>
 
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 
 </body>
 </html>
+
 
 
