Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
  -->
 <footer>
   <div class="container footer__inner">
-    <span>© <span id="year"></span> Javier Díaz</span>
-    <span class="muted">Hecho con HTML + CSS · GitHub Pages</span>
+    <span>© <span id="year"></span> Javier Díaz</span> - v0.0.36
   </div>
 </footer>
  
@@ -259,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
